Fixed dependencies and run arguments